--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,98 @@
 version: '3.8'
 
 services:
-  postgres:
+  postgres_db1:
     image: postgres:16
-    container_name: postgres
+    container_name: postgres_db1
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data1:/var/lib/postgresql/data
     networks:
       - mynetwork
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       retries: 5
 
-  persons-service:
-    build: ./PersonsApiServer
-    container_name: persons-service
+  postgres_db2:
+    image: postgres:16
+    container_name: postgres_db2
     restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydatabase
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_APPLICATION_JSON: '{"server.port":8081}'
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     ports:
-      - "8081:8081"
-    networks:
-      - mynetwork
+      - "5433:5432"
+    volumes:
+      - postgres_data2:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      retries: 5
 
-  companies-service:
-    build: ./CompaniesApiServer
-    container_name: companies-service
-    restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
-      persons-service:
-        condition: service_started
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydatabase
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_APPLICATION_JSON: '{"server.port":8082}'
-    ports:
-      - "8082:8082"
-    networks:
-      - mynetwork
+#  persons-service:
+#    build: ./spring-microservices/PersonsApiService
+#    container_name: persons-service
+#    restart: always
+#    depends_on:
+#      postgres:
+#        condition: service_healthy
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydatabase
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: postgres
+#      SPRING_APPLICATION_JSON: '{"server.port":8081}'
+#    ports:
+#      - "8081:8081"
+#    networks:
+#      - mynetwork
+#
+#  companies-service:
+#    build: ./spring-microservices/CompaniesApiService
+#    container_name: companies-service
+#    restart: always
+#    depends_on:
+#      postgres:
+#        condition: service_healthy
+#      persons-service:
+#        condition: service_started
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydatabase
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: postgres
+#      SPRING_APPLICATION_JSON: '{"server.port":8082}'
+#    ports:
+#      - "8082:8082"
+#    networks:
+#      - mynetwork
+#
+#  api-gateway:
+#    build: ./spring-microservices/ApiGatewayService
+#    container_name: api-gateway
+#    restart: always
+#    depends_on:
+#      persons-service:
+#        condition: service_started
+#      companies-service:
+#        condition: service_started
+#    environment:
+#      SPRING_APPLICATION_JSON: '{"server.port":8080}'
+#    ports:
+#      - "8080:8080"
+#    networks:
+#      - mynetwork
 
-  api-gateway:
-    build: ./ApiGateway
-    container_name: api-gateway
-    restart: always
-    depends_on:
-      persons-service:
-        condition: service_started
-      companies-service:
-        condition: service_started
-    environment:
-      SPRING_APPLICATION_JSON: '{"server.port":8080}'
-    ports:
-      - "8080:8080"
-    networks:
-      - mynetwork
-    
 networks:
   mynetwork:
     driver: bridge
 
 volumes:
-  postgres_data: {}
+  postgres_data1: { }
+  postgres_data2: { }
