--- a/spring-microservices/CompaniesApiService/Dockerfile
+++ b/spring-microservices/CompaniesApiService/Dockerfile
@@ -2,6 +2,8 @@ FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-COPY target/datastoreservice-0.0.1-SNAPSHOT.jar app.jar
+COPY target/CompaniesApiService-1.0.0.jar app.jar
 
-CMD ["java", "-jar", "app.jar"]
+ENV LANG=C.UTF-8
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
