--- a/spring-microservices/CompaniesApiService/pom.xml
+++ b/spring-microservices/CompaniesApiService/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>CompaniesApiService</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -32,5 +33,22 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
