--- a/spring-microservices/CompaniesApiService/src/main/resources/application.yml
+++ b/spring-microservices/CompaniesApiService/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8082
-#  port: ${SERVER_PORT}
+#  port: 8082
+  port: ${SERVER_PORT}
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
+    url: jdbc:postgresql://postgres_db2:5432/companiesdb
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
