--- a/spring-microservices/PersonsApiService/src/main/resources/application.yml
+++ b/spring-microservices/PersonsApiService/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
-#  port: ${SERVER_PORT}
+#  port: 8081
+  port: ${SERVER_PORT}
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://postgres_db1:5432/personsdb
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
