--- a/spring-microservices/pom.xml
+++ b/spring-microservices/pom.xml
@@ -8,6 +8,11 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <java.version>17</java.version>
+        <spring-boot.version>3.1.2</spring-boot.version>
+    </properties>
+
     <modules>
         <module>ApiGatewayService</module>
         <module>CompaniesApiService</module>
@@ -29,7 +34,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2022.0.4</version>
+                <version>2023.0.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
