--- a/spring-microservices/PersonsApiService/src/main/resources/application.yml
+++ b/spring-microservices/PersonsApiService/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
-#  port: 8081
+  #  port: 8081
   port: ${SERVER_PORT}
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres_db1:5432/personsdb
+#    url: jdbc:postgresql://postgres_db1:5432/personsdb
+    url: ${SPRING_DATASOURCE_URL}
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -16,3 +17,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-service:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    hostname: ${HOSTNAME}
