--- a/spring-microservices/pom.xml
+++ b/spring-microservices/pom.xml
@@ -12,11 +12,26 @@
         <java.version>17</java.version>
         <spring-boot.version>3.1.2</spring-boot.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+        </dependency>
+    </dependencies>
 
     <modules>
         <module>ApiGatewayService</module>
         <module>CompaniesApiService</module>
         <module>PersonsApiService</module>
+        <module>EurekaService</module>
     </modules>
 
     <dependencyManagement>
